@@ -18,6 +18,7 @@ See <a href="../install.html#librarydependencies">Library Dependencies</a> for m
 accessible from the script, using either their <code>name</code> or
 <code>id</code> attributes (as long as their names are considered
 valid Java identifiers, that is).
+This is controlled by the "setbeans" attribute of the task.
 The name "project" is a pre-defined reference to the Project, which can be
 used instead of the project name. The name "self" is a pre-defined reference to the actual
 <code>&lt;script&gt;</code>-Task instance.<br>From these objects you have access to the Ant Java API, see the
@@ -54,7 +55,50 @@ Groups@Google: "Rhino, enum.js, JavaAdapter?"</a> by Norris Boyd in the newsgrou
     <td valign="top">The location of the script as a file, if not inline</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">setbeans</td>
+    <td valign="top">
+      This attribute controls whether to set variables for
+      all properties, references and targets in the running script.
+      If this attribute is false, only the the "project" and "self" variables are set.
+      If this attribute is true all the variables are set. The default value of this
+      attribute is "true".  <em>Since Ant 1.7</em>
+    </td>
+    <td valign="top" align="center">No</td>
+  </tr>
+  <tr>
+    <td valign="top">classpath</td>
+    <td valign="top">
+      The classpath to pass into the script. <em>Since Ant 1.7</em>
+    </td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">classpathref</td>
+    <td valign="top">The classpath to use, given as a
+       <a href="../using.html#references">reference</a> to a path defined elsewhere.
+    <em>Since Ant 1.7</em></td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
+<h3>Parameters specified as nested elements</h3>
+<h4>classpath</h4>
+  <p><em>Since Ant 1.7</em></p>
+<p>
+  <code>Script</code>'s <code>classpath</code> attribute is a 
+  <a href="../using.html#path">path-like structure</a> and can also be set via a nested
+  <code>&lt;classpath&gt;</code> element.
+  <p>
+    If a classpath is set, it will be used as the current thread context classloader, and
+    as the classloader given to the BSF manager. This means that it can be used to specify
+    the classpath containing the language implementation. This can be usefull if one wants
+    to keep ${user.home}/.ant/lib free of lots of scripting language specific jar files.
+  </p>
+  <p>
+    <b>NB:</b> This classpath cannot (currently) be used to specify the location of
+    the BSF jar file.
+  </p>
+</p>
 <h3>Examples</h3>
 The following snippet shows use of five different languages:
   <blockquote><pre>
@@ -86,6 +130,9 @@ print "message is %s" % message
   start on the first column.
   </p>
   <p>
+    Note also that for the <i>ruby</i> example, the names of the set variables are prefixed
+    by a '$'.
+  <p>
     The following script shows a little more complicated jruby example:
   </p>
   <blockquote><pre>
@@ -102,6 +149,19 @@ print "message is %s" % message
 &lt;script language="groovy"&gt;
   xmlfiles = new java.io.File(".").listFiles().findAll{ it =~ "\.xml$"}
   xmlfiles.sort().each { self.log(it.toString())}
+&lt;/script&gt;
+</pre>
+  </blockquote>
+  <p>
+    The following example shows the use of classpath to specify the location
+    of the beanshell jar file.
+  </p>
+  <blockquote><pre>
+&lt;script language="beanshell" setbeans="true"&gt;
+  &lt;classpath&gt;
+    &lt;fileset dir="${user.home}/lang/beanshell" includes="*.jar" /&gt;
+  &lt;/classpath&gt;
+  System.out.println("Hello world");
 &lt;/script&gt;
 </pre>
   </blockquote>
@@ -257,7 +317,7 @@ appropriate logging before and after invoking execute().
 
 
 <hr>
-<p align="center">Copyright &copy; 2000-2005 The Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2000-2006 The Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
